--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   }
 }
